[gd_scene format=3 uid="uid://bcox1duwgqdib"]

[ext_resource type="Script" uid="uid://jb5s5xwkp1rc" path="res://scripts/person/people.gd" id="1_g3chb"]
[ext_resource type="PackedScene" uid="uid://3athoxt1ows7" path="res://prefabs/person.tscn" id="2_lfn86"]
[ext_resource type="Script" uid="uid://ivjtn3ckartd" path="res://scripts/game/game.gd" id="3_0ejwr"]
[ext_resource type="Texture2D" uid="uid://pq36apado1cb" path="res://sprites/masks/x3.png" id="4_5udw4"]
[ext_resource type="Texture2D" uid="uid://ckwn2sle02ybo" path="res://sprites/masks/x4.png" id="5_5l6j7"]
[ext_resource type="Texture2D" uid="uid://bdujr7n264vpp" path="res://sprites/masks/x2.png" id="6_4likk"]
[ext_resource type="Texture2D" uid="uid://x2fm6l5yk2lc" path="res://sprites/masks/x5.png" id="7_lhmav"]
[ext_resource type="Texture2D" uid="uid://dlrxwqu5nfai5" path="res://sprites/masks/x6.png" id="8_6qpsf"]
[ext_resource type="AudioStream" uid="uid://pat0imnbadjo" path="res://sounds/Win_Lose/High_Score.wav" id="9_pcsq5"]
[ext_resource type="Script" uid="uid://dclhgvb3epv75" path="res://scripts/player/controller.gd" id="9_t1lb4"]
[ext_resource type="Script" uid="uid://bqr7dhrerb5l" path="res://scripts/player/drag_and_drop.gd" id="10_5psil"]
[ext_resource type="Script" uid="uid://l6omdr1d3oyc" path="res://scripts/player/intersect_point.gd" id="11_ljn4o"]
[ext_resource type="PackedScene" uid="uid://dkjqcdxldw7ov" path="res://prefabs/heart.tscn" id="12_7lk5s"]
[ext_resource type="AudioStream" uid="uid://fb76db0aio" path="res://sounds/Menu/UI_error.wav" id="12_i33xw"]
[ext_resource type="LabelSettings" uid="uid://bhaiaix7e2w81" path="res://texts/main.tres" id="12_itcd2"]
[ext_resource type="AudioStream" uid="uid://cd7bflx8withl" path="res://sounds/Menu/Menu_Start.wav" id="13_76eh3"]
[ext_resource type="Script" uid="uid://dwqdrh70j5fv6" path="res://scripts/ui/number_of_lovers.gd" id="13_d6l04"]
[ext_resource type="Script" uid="uid://l8ppi3l8bewf" path="res://scripts/ui/time_label.gd" id="14_64ba3"]
[ext_resource type="Script" uid="uid://cs562nk2jt3ko" path="res://scripts/game/walls.gd" id="14_dlb51"]
[ext_resource type="Texture2D" uid="uid://bvatt8cp4covo" path="res://sprites/grass.png" id="15_0hqpe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js46e"]
size = Vector2(32, 157)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64ba3"]
size = Vector2(32, 174)

[node name="2" type="Node2D" unique_id=1460614836]

[node name="Camera2D" type="Camera2D" parent="." unique_id=737257766]
zoom = Vector2(3, 3)

[node name="People" type="Node2D" parent="." unique_id=317639184]
script = ExtResource("1_g3chb")
person_packed = ExtResource("2_lfn86")

[node name="Game" type="Node" parent="." unique_id=1882551454]
script = ExtResource("3_0ejwr")
faces = Array[Texture2D]([ExtResource("4_5udw4"), ExtResource("5_5l6j7"), ExtResource("6_4likk"), ExtResource("7_lhmav"), ExtResource("8_6qpsf")])
num_of_people = 8

[node name="WinStream" type="AudioStreamPlayer2D" parent="Game" unique_id=2056259435]
stream = ExtResource("9_pcsq5")
volume_db = 3.0

[node name="Controller" type="Node2D" parent="." unique_id=733999824]
script = ExtResource("9_t1lb4")

[node name="DragAndDrop" type="Node2D" parent="Controller" unique_id=123206758]
script = ExtResource("10_5psil")
heart = ExtResource("12_7lk5s")

[node name="IntersectPoint" type="Node2D" parent="Controller" unique_id=944055193]
script = ExtResource("11_ljn4o")

[node name="MissAudio" type="AudioStreamPlayer2D" parent="Controller" unique_id=858755497]
stream = ExtResource("12_i33xw")

[node name="CreateLoveStream" type="AudioStreamPlayer2D" parent="Controller" unique_id=341021975]
stream = ExtResource("13_76eh3")

[node name="Lovers" type="Node2D" parent="." unique_id=1032067600]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1422489711]

[node name="Top" type="Control" parent="CanvasLayer" unique_id=1053971479]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 182.0
offset_right = 182.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/Top" unique_id=1066601621]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Number of Lovers Left: "
label_settings = ExtResource("12_itcd2")

[node name="SinglesCount" type="Label" parent="CanvasLayer/Top" unique_id=1784702430]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
label_settings = ExtResource("12_itcd2")
script = ExtResource("13_d6l04")

[node name="Bottom" type="Control" parent="CanvasLayer" unique_id=2113408315]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="TimeLabel" type="Label" parent="CanvasLayer/Bottom" unique_id=1464686280]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -50.0
offset_right = 16.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
label_settings = ExtResource("12_itcd2")
script = ExtResource("14_64ba3")

[node name="Enviroment" type="Node2D" parent="." unique_id=910471547]

[node name="Area2D" type="Area2D" parent="Enviroment" unique_id=1685876212]
script = ExtResource("14_dlb51")

[node name="WallBody" type="StaticBody2D" parent="Enviroment" unique_id=1962176710]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/WallBody" unique_id=1595750013]
position = Vector2(-166, 9)
shape = SubResource("RectangleShape2D_js46e")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Enviroment/WallBody" unique_id=222977803]
position = Vector2(160, 8.5)
shape = SubResource("RectangleShape2D_js46e")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Enviroment/WallBody" unique_id=493938017]
position = Vector2(-81, -78)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_64ba3")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Enviroment/WallBody" unique_id=777222883]
position = Vector2(63, -57)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_64ba3")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Enviroment/WallBody" unique_id=384286985]
position = Vector2(86, 98)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_64ba3")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Enviroment/WallBody" unique_id=1206633689]
position = Vector2(-79, 102)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_64ba3")

[node name="Grass" type="Sprite2D" parent="Enviroment" unique_id=2004999333]
z_index = -10
position = Vector2(0, 14)
scale = Vector2(0.33631387, 0.32375428)
texture = ExtResource("15_0hqpe")
